<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.currencyconverter.MainActivity"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="У меня есть"
            android:layout_marginRight="10dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/tv_have_label"
            android:textSize="@dimen/labelTextSize"
            android:gravity="center_vertical"
            />
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="9"
            android:id="@+id/et_summa"
            android:hint="@string/sum"
            android:gravity="center"
            android:layout_toRightOf="@+id/tv_have_label"
            android:layout_toLeftOf="@+id/spin_currency_from"
            android:enabled="false"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/spin_currency_from"
            android:layout_marginBottom="5dp"
            android:layout_alignParentRight="true"
            android:enabled="false"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Хочу приобрести"
            android:textSize="@dimen/labelTextSize"
            android:layout_alignParentLeft="true"
            android:id="@+id/tv_currency_to_label"
            android:gravity="center_vertical"
            android:layout_toLeftOf="@+id/spin_currency_to"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/spin_currency_to"
            android:layout_marginBottom="5dp"
            android:layout_alignParentRight="true"
            android:enabled="false"
            />
    </RelativeLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:textAllCaps="true"
        android:text="@string/button_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:id="@+id/btn_convert"
        android:enabled="false"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="32sp"
        android:id="@+id/tv_result"
        android:gravity="center_horizontal"
        tools:text="1500"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="12sp"
        android:id="@+id/tv_result_text"
        android:gravity="center_horizontal"
        tools:text="1500"
        />

</LinearLayout>
